@@ -2953,6 +2953,16 @@ assert(psm->mi == NULL);
 	    else
 		rc = rpmdbAdd(rpmtsGetRdb(ts), tid, fi->h, NULL);
 	    (void) rpmswExit(rpmtsOp(ts, RPMTS_OP_DBADD), 0);
+#if defined(HAVE_SYSLOG_H) && defined(RPM_VENDOR_MANDRIVA) /* log-install-remove-to-syslog */
+    	    {
+	   	    char *s;
+
+	   	    s = headerSprintf(fi->h, "%{NAME}-%{VERSION}-%{RELEASE}",
+	 			    rpmTagTable, rpmHeaderFormats, NULL);
+	   	    syslog(LOG_NOTICE, "[RPM] %s installed\n", s);
+	   	    s = _free(s);
+    	    }
+#endif
 	}
 
 	if (rc != RPMRC_OK) break;
@@ -2974,6 +2984,16 @@ assert(psm->te != NULL);
 	(void) rpmswEnter(rpmtsOp(ts, RPMTS_OP_DBREMOVE), 0);
 	rc = rpmdbRemove(rpmtsGetRdb(ts), rpmtsGetTid(ts), fi->record, NULL);
 	(void) rpmswExit(rpmtsOp(ts, RPMTS_OP_DBREMOVE), 0);
+#if defined(HAVE_SYSLOG_H) && defined(RPM_VENDOR_MANDRIVA) /* log-install-remove-to-syslog */
+        {
+	  char *s;
+
+	  s = headerSprintf(fi->h, "%{NAME}-%{VERSION}-%{RELEASE}",
+			    rpmTagTable, rpmHeaderFormats, NULL);
+	  syslog(LOG_NOTICE, "[RPM] %s removed\n", s);
+	  s = _free(s);
+	}
+#endif
 
 	if (rc != RPMRC_OK) break;
 
