@@ -1,4 +1,5 @@
 5.2.0 -> 5.2.1:
+    - proyvind: Mandriva: log install/remove of packages to syslog.
     - proyvind: undo previous revert of checkfiles behaviour which broke build
 	of many packages.
     - permit RPMTAG_FILECONTEXTS addition to be disabled.
